# serial

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: avrdude.conf
app/src/main/cpp/: CMakeLists.txt  main.c  native-lib.cpp
app/src/main/cpp/libavrdude/: CMakeLists.txt  ac_cfg.h  avrftdi_private.h  ch341a.c  config_gram.c  config_gram.h  ft245r.c  internal.h  lexer.c  main.c  pgm_type.c  stk500v2.c  usbasp.c  ywmode.c  ywmode.h
app/src/main/cpp/libftdi1/: CMakeLists.txt
app/src/main/cpp/libs/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libs/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libs/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libs/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/: CMakeLists.txt  config.h  libusb.h
app/src/main/cpp/libusb/os/: linux_usbfs.h
app/src/main/cpp/libusbserial/: CMakeLists.txt  core.c  io.c
app/src/main/java/com/example/serial/: MainActivity.java
app/src/main/res/drawable/: box_border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
